samples/_failures_safe/1761045519_4beb77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f699943b.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f699943b.c:161:37: error: expected ‘)’ at end of input
  161 |             if (parse_operator(input
      |                               ~     ^
      |                                     )
./samples/SAFE/__tmp_f699943b.c:161:17: error: too few arguments to function ‘parse_operator’
  161 |             if (parse_operator(input
      |                 ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_f699943b.c:102:5: note: declared here
  102 | int parse_operator(const char *input, int *pos, int len, struct Token *token) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_f699943b.c:161:13: error: expected declaration or statement at end of input
  161 |             if (parse_operator(input
      |             ^~
./samples/SAFE/__tmp_f699943b.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f699943b.c:161:13: error: expected declaration or statement at end of input
